--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,10 @@ a {
   .footer-credits .hidden {
     display: none; }
 
+.offline a.online {
+  opacity: 0.5;
+  pointer-events: none; }
+
 #content {
   display: flex;
   flex-direction: column;
