--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -117,6 +117,8 @@ a { text-decoration: none; color: $color-text; }
   .hidden { display: none; }
 }
 
+.offline a.online { opacity: 0.5; pointer-events: none; } // disabled
+
 #content { display: flex; flex-direction: column; min-height: 100vh; justify-content: center; align-items: center; position: relative; z-index: 10; }
 #map-box { width: 100%; height: 100%;
   img { width: 100%; height: auto; max-width: 100%; }
