--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -55,11 +55,13 @@ a { text-decoration: none; color: $color-text; }
   .logo { width: 24px; height: 24px; background: url('../img/graphic.svg') no-repeat; margin-right: 8px; }
   .map-msk & .logo { background-position: 0 0; }
   .map-spb & .logo { background-position: -24px 0; }
+  .map-mnk & .logo { background-position: -48px 0; }
   .map-title { font-weight: 500; }
   @media (min-width: 350px) {
     .logo { margin-right: 12px; margin-left: 8px; }
-    .logo { width: 32px; height: 32px; background-size: auto 32px; }
+    .logo { width: 32px; height: 32px; background-size: auto 64px; }
     .map-spb & .logo { background-position: -32px 0; }
+    .map-mnk & .logo { background-position: -64px 0; }
   }
   @media (min-width: 380px) {
     .map-title { font-size: 18px; }
@@ -77,16 +79,18 @@ a { text-decoration: none; color: $color-text; }
   .current { pointer-events: none; font-weight: 500; border-bottom: 1px solid rgba(#000, 0.12); margin-bottom: 8px; padding-bottom: 8px; }
   .disabled { pointer-events: none; opacity: 0.5; }
 }
-.lang-ru .switch-ru { display: none; }
+.lang-ru .switch-na { display: none; }
+.lang-by .switch-na { display: none; }
 .lang-en .switch-en { display: none; }
 
-.menu-item-msk, .menu-item-spb, .menu-item-download, .menu-item-metro2, .switch-en, .switch-ru {
+.menu-item-msk, .menu-item-spb, .menu-item-mnk, .menu-item-download, .menu-item-metro2, .switch-en, .switch-na {
   .menu-dropdown li & { display: flex; align-items: center; }
 }
-.menu-item-msk, .menu-item-spb {
+.menu-item-msk, .menu-item-spb, .menu-item-mnk {
   &:before { display: block; content: ''; width: 24px; height: 24px; background: url('../img/graphic.svg') no-repeat; margin-right: 12px; }
 }
 .menu-item-spb:before { background-position: -24px 0; }
+.menu-item-mnk:before { background-position: -48px 0; }
 
 .menu-item-download, .menu-item-metro2 {
   &:before { @extend .material-icons; display: block; width: 24px; height: 24px; color: rgba(#000, .5); margin-right: 12px; }
@@ -98,14 +102,18 @@ a { text-decoration: none; color: $color-text; }
   &:before { content: 'map'; }
 }
 
-.switch-ru, .switch-en {
+.switch-na, .switch-en {
   &:before { display: block; width: 22px; height: 18px; background: rgba(#000, .5); border-radius: 2px; line-height: 18px; text-align: center;
     font-size: 10px; font-weight: 500; margin: 3px 13px 3px 1px; color: #FFF;
   }
 }
-.switch-ru { 
-  .lang-ru .menu-dropdown li & {  display: none; }
-  &:before { content: 'RU'; }
+.switch-na { 
+  .lang-ru .menu-dropdown li & { display: none; }
+  .native-lang-ru &:before { content: 'RU'; }
+}
+.switch-na { 
+  .lang-by .menu-dropdown li & { display: none; }
+  .native-lang-by &:before { content: 'BY'; }
 }
 .switch-en {
   .lang-en .menu-dropdown li & { display: none; }
@@ -113,7 +121,7 @@ a { text-decoration: none; color: $color-text; }
 }
 
 .footer-credits { position: absolute; right: 24px; bottom: 23px;
-  .d-logo { display: block; width: 100px; height: 18px; background: url('../img/graphic.svg') -36px 0 no-repeat; background-size: auto 18px; }
+  .d-logo { display: block; width: 100px; height: 18px; background: url('../img/graphic.svg') 0 -18px no-repeat; background-size: auto 36px; }
   .hidden { display: none; }
 }
 
